--- a/package.json
+++ b/package.json
@@ -40,28 +40,25 @@
     "fix": "npm run fix:tslint && npm run fix:prettier"
   },
   "dependencies": {
+    "@angular/cli": "7.3.4",
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
+    "@angular/compiler-cli": "5.2.10",
     "@angular/core": "5.2.10",
     "@angular/forms": "5.2.10",
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "angular2-moment": "1.7.1",
-    "angular2-qrcode": "2.0.1",
-    "bs58": "^4.0.1",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "lodash": "^4.17.20",
-    "rxjs": "5.5.12",
-    "zone.js": "0.8.12",
-    "@angular/cli": "7.3.4",
-    "@angular/compiler-cli": "5.2.10",
     "@ionic/app-scripts": "3.2.3",
     "@types/jasmine": "2.5.41",
     "@types/lodash": "4.14.104",
     "@types/node": "7.0.4",
+    "angular2-moment": "1.7.1",
+    "angular2-qrcode": "2.0.1",
+    "bs58": "^4.0.1",
     "codecov": "2.2.0",
+    "ionic-angular": "3.9.2",
+    "ionicons": "3.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.1",
@@ -70,7 +67,10 @@
     "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
+    "lodash": "^4.17.20",
     "prettier": "^1.15.3",
+    "random": "^2.2.0",
+    "rxjs": "5.5.12",
     "serve": "^10.1.1",
     "serve-static": "1.13.2",
     "ts-node": "3.0.4",
@@ -79,7 +79,8 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "4.1.1",
     "typescript": "^3.3.4000",
-    "webdriver-manager": "^12.1.1"
+    "webdriver-manager": "^12.1.1",
+    "zone.js": "0.8.12"
   },
   "engines": {
     "node": ">=8"
