--- a/package.json
+++ b/package.json
@@ -55,8 +55,15 @@
     "@types/node": "7.0.4",
     "angular2-moment": "1.7.1",
     "angular2-qrcode": "2.0.1",
+    "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
     "codecov": "2.2.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.1.1",
+    "heroku-ssl-redirect": "^0.1.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "jasmine-core": "2.5.2",
@@ -68,6 +75,7 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "lodash": "^4.17.20",
+    "path": "^0.12.7",
     "prettier": "^1.15.3",
     "random": "^2.2.0",
     "rxjs": "5.5.12",
