--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "lodash": "^4.17.20",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "prettier": "^1.15.3",
@@ -93,5 +94,8 @@
   },
   "engines": {
     "node": ">=8"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^1.0.6"
   }
 }
